mdix-php/src/Mdix/Internal/ffi_header.h

typedef unsigned char  uint8_t;
typedef int            int32_t;
/* ── Type discriminants ──────────────────────────────────────────────────── */

typedef enum MdixType {
    MDIX_TYPE_UNKNOWN   = -1,
    MDIX_TYPE_NULL      =  0,
    MDIX_TYPE_BOOL      =  1,
    MDIX_TYPE_INT       =  2,
    MDIX_TYPE_FLOAT     =  3,
    MDIX_TYPE_DOUBLE    =  4,
    MDIX_TYPE_STRING    =  5,
    MDIX_TYPE_DATE      =  6,
    MDIX_TYPE_TIMESTAMP =  7,
    MDIX_TYPE_HEX_COLOR =  8,
    MDIX_TYPE_BLOB      =  9,
    MDIX_TYPE_REGEX     = 10,
    MDIX_TYPE_ARRAY     = 11,
    MDIX_TYPE_OBJECT    = 12,
    MDIX_TYPE_TUPLE     = 13,
    MDIX_TYPE_ENUM      = 14
} MdixType;
/* ── Metadata ────────────────────────────────────────────────────────────── */

const char* mdix_version(void);
/* ── Handle lifecycle — plain .mdix ─────────────────────────────────────── */

void* mdix_load(const char* path);
void* mdix_load_str(const char* source);
void  mdix_free(void* handle);
/* ── Handle lifecycle — encrypted ───────────────────────────────────────── */

void* mdix_load_encrypted(const char* enc_path, const char* key_path);
void* mdix_load_encrypted_password(const char* enc_path, const char* password);
void* mdix_load_encrypted_bytes(
    const uint8_t* encrypted_bytes,
    int32_t        byte_count,
    const char*    key_file_content,
    const char*    password
);
/* ── Validity / metadata ─────────────────────────────────────────────────── */

bool    mdix_is_valid(const void* handle);
int32_t mdix_entry_count(const void* handle);
/* ── Type inspection ─────────────────────────────────────────────────────── */

MdixType mdix_get_type(const void* handle, const char* path);
int32_t  mdix_get_array_length(const void* handle, const char* path);
/* ── Typed getters ───────────────────────────────────────────────────────── */

char*   mdix_get_string(const void* handle, const char* path);
int32_t mdix_get_int(const void* handle, const char* path);
float   mdix_get_float(const void* handle, const char* path);
double  mdix_get_double(const void* handle, const char* path);
bool    mdix_get_bool(const void* handle, const char* path);
char*   mdix_get_enum_name(const void* handle, const char* path);
char*   mdix_get_enum_field(const void* handle, const char* path);
char*   mdix_get_json(const void* handle, const char* path);
/* ── Key existence / enumeration ─────────────────────────────────────────── */

bool    mdix_exists(const void* handle, const char* path);
char**  mdix_get_keys(const void* handle, const char* prefix, int32_t* out_count);
/* ── Memory management ───────────────────────────────────────────────────── */

void mdix_free_string(char* s);
void mdix_free_string_array(char** arr, int32_t count);
/* ── Error reporting ─────────────────────────────────────────────────────── */

const char* mdix_get_last_error(void);