ffi/builds/build_54/MdixNative.cs

// <auto-generated>
// This code is generated by csbindgen.
// DON'T CHANGE THIS DIRECTLY.
// </auto-generated>
#pragma warning disable CS8500
#pragma warning disable CS8981
using System;
using System.Runtime.InteropServices;


namespace MidManStudio.DixScript.Native
{
    internal static unsafe partial class MdixNative
    {
#if UNITY_IOS && !UNITY_EDITOR
        const string __DllName = "__Internal";
#else
        const string __DllName = "mdix_ffi";
#endif
        





        /// <summary>
        ///  Return the DixScript library version as a null-terminated C string.
        ///
        ///  The returned pointer is static — do NOT free it with mdix_free_string.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_version", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_version();

        /// <summary>
        ///  Load a plain .mdix file from disk.
        ///
        ///  Returns an opaque void pointer on success, null on failure.
        ///  The caller must free the handle with mdix_free() when done.
        ///  On failure, call mdix_get_last_error() for a description.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_load", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* mdix_load(byte* path);

        /// <summary>
        ///  Load a .mdix file from a raw source string (no disk access).
        ///
        ///  Useful for loading .mdix content bundled as a TextAsset in Unity.
        ///  Returns an opaque void pointer on success, null on failure.
        ///  The caller must free the handle with mdix_free() when done.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_load_str", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* mdix_load_str(byte* source);

        /// <summary>
        ///  Load an encrypted .mdix.enc file using a key file for decryption.
        ///
        ///  `enc_path` — path to the .mdix.enc file.
        ///  `key_path` — path to the .mdix.key file, or null to auto-detect next to the .enc file.
        ///  Returns an opaque void pointer on success, null on failure.
        ///  The caller must free the handle with mdix_free() when done.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_load_encrypted", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* mdix_load_encrypted(byte* enc_path, byte* key_path);

        /// <summary>
        ///  Load an encrypted .mdix.enc file using a password for decryption.
        ///
        ///  `enc_path` — path to the .mdix.enc file.
        ///  `password` — decryption password (must match the one used during compilation).
        ///  Returns an opaque void pointer on success, null on failure.
        ///  The caller must free the handle with mdix_free() when done.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_load_encrypted_password", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* mdix_load_encrypted_password(byte* enc_path, byte* password);

        /// <summary>
        ///  Load encrypted data from raw bytes with the key file contents as a string.
        ///
        ///  `encrypted_bytes`  — pointer to the encrypted data buffer.
        ///  `byte_count`       — number of bytes in the buffer.
        ///  `key_file_content` — full text content of the .mdix.key file.
        ///  `password`         — decryption password, or null if key file mode.
        ///  Returns an opaque void pointer on success, null on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_load_encrypted_bytes", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void* mdix_load_encrypted_bytes(byte* encrypted_bytes, int byte_count, byte* key_file_content, byte* password);

        /// <summary>
        ///  Free a handle returned by any mdix_load* function.
        ///
        ///  After calling this the pointer is invalid — do not use it again.
        ///  Passing null is safe and does nothing.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void mdix_free(void* handle);

        /// <summary>
        ///  Return true if the handle pointer is non-null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_is_valid", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_is_valid(void* handle);

        /// <summary>
        ///  Return the total number of data entries in the loaded file.
        ///
        ///  Returns -1 if the handle is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_entry_count", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int mdix_entry_count(void* handle);

        /// <summary>
        ///  Return the MdixType discriminant of the value at the given path.
        ///
        ///  Returns MdixType::Unknown (-1) if the path does not exist or the handle is null.
        ///  Call this before a getter when the schema is not known at compile time.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_type", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern MdixType mdix_get_type(void* handle, byte* path);

        /// <summary>
        ///  Return the number of items in the array at the given path.
        ///
        ///  Returns -1 if the path does not exist, the value is not an array, or handle is null.
        ///  Use this to drive a loop over indexed paths:
        ///    for i in 0..mdix_get_array_length(h, "enemies") { mdix_get_int(h, $"enemies[{i}].health") }
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_array_length", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int mdix_get_array_length(void* handle, byte* path);

        /// <summary>
        ///  Get a string value by dotted path.
        ///
        ///  Also works for Date, Timestamp, and HexColor — all are stored as strings.
        ///  Returns a heap-allocated C string on success, null on failure.
        ///  The caller must free the result with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_get_string(void* handle, byte* path);

        /// <summary>
        ///  Get an integer value by dotted path.
        ///
        ///  Also works for Enum values — returns the resolved integer (e.g. BOSS → 2).
        ///  Returns 0 on failure. Use mdix_exists() to distinguish 0 from not-found.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_int", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int mdix_get_int(void* handle, byte* path);

        /// <summary>
        ///  Get a float (f32) value by dotted path. Returns 0.0 on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_float", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern float mdix_get_float(void* handle, byte* path);

        /// <summary>
        ///  Get a double (f64) value by dotted path. Returns 0.0 on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_double", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern double mdix_get_double(void* handle, byte* path);

        /// <summary>
        ///  Get a boolean value by dotted path. Returns false on failure.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_bool", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_get_bool(void* handle, byte* path);

        /// <summary>
        ///  Return the enum type name at the given path (e.g. "AIType").
        ///
        ///  Returns null if the path does not exist or is not an enum.
        ///  The caller must free the result with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_enum_name", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_get_enum_name(void* handle, byte* path);

        /// <summary>
        ///  Return the enum field name at the given path (e.g. "BOSS").
        ///
        ///  Returns null if the path does not exist or is not an enum.
        ///  The caller must free the result with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_enum_field", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_get_enum_field(void* handle, byte* path);

        /// <summary>
        ///  Serialize the value at the given path to a JSON string.
        ///
        ///  Escape hatch for Blob, Regex, Tuple, and any nested structure.
        ///  Returns a heap-allocated C string on success, null on failure.
        ///  The caller must free the result with mdix_free_string().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_json", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte* mdix_get_json(void* handle, byte* path);

        /// <summary>
        ///  Check whether a dotted path exists in the loaded data.
        ///
        ///  Returns false if the handle is null.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_exists", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool mdix_exists(void* handle, byte* path);

        /// <summary>
        ///  Get the direct child key names under a path prefix.
        ///
        ///  `prefix`    — dotted path prefix, or null / empty string for top-level keys.
        ///  `out_count` — receives the number of keys returned. Must not be null.
        ///
        ///  Returns a heap-allocated array of null-terminated C strings, or null if empty.
        ///  The caller must free the result with mdix_free_string_array(result, out_count).
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_get_keys", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern byte** mdix_get_keys(void* handle, byte* prefix, int* out_count);

        /// <summary>
        ///  Free a string returned by any mdix getter that returns *mut c_char.
        ///
        ///  Passing null is safe. Do NOT call this on the pointer from mdix_version().
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_free_string", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void mdix_free_string(byte* s);

        /// <summary>
        ///  Free an array of strings returned by mdix_get_keys.
        ///
        ///  `arr`   — pointer returned by mdix_get_keys.
        ///  `count` — value written to out_count by mdix_get_keys.
        /// </summary>
        [DllImport(__DllName, EntryPoint = "mdix_free_string_array", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void mdix_free_string_array(byte** arr, int count);
